# Klayr

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  Makefile  pyproject.toml  requirements.txt
backend/public/: app.js  index.html
backend/src/api/: config.py  dependencies.py  main.py
backend/src/api/routes/: collaborators.py  feedback.py  health.py  literature_search.py  optimize.py  plan.py  report.py  reviews.py  run.py
backend/src/domain/entities/: experiment.py
backend/src/domain/parsers/: output_parser.py
backend/src/domain/pipeline/: graph.py  quality_gate.py  state.py
backend/src/domain/ports/: cache.py  experiment_repo.py  lit_search.py  llm_client.py
backend/src/domain/prompts/: __init__.py  biosafety_prompt.py  budget_prompt.py  hypothesis_prompt.py  literature_prompt.py  materials_prompt.py  protocol_prompt.py  risk_prompt.py  timeline_prompt.py  validation_prompt.py
backend/src/infrastructure/cache/: redis_adapter.py
backend/src/infrastructure/db/: models.py  postgres_repo.py
backend/src/infrastructure/llm/: anthropic_client.py  groq_client.py
backend/src/infrastructure/search/: combined_search.py  pubmed.py  semantic_scholar.py
backend/tests/: conftest.py
backend/tests/api/: test_routes.py
backend/tests/domain/: test_parsers.py  test_pipeline.py  test_quality_gate.py
frontend/: index.html  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: MethodicaLogo.tsx
frontend/src/hooks/: useApi.ts
frontend/src/lib/: api.ts
frontend/src/pages/: Login.tsx
(+18 files in other folders)
